<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris_fuerte"
        android:gravity="end"
        android:hint="0"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="90sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:onClick="borrar"
            android:id="@+id/borrar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_medio"
            android:text="@string/borrar"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_medio"
            android:text="@string/sumar_restar"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:onClick="porcentaje"
            android:id="@+id/porcentaje"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_medio"
            android:text="@string/porcentaje"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:onClick="dividir"
            android:id="@+id/dividir"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/division"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="siete"
            android:id="@+id/siete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/siete"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="ocho"
            android:id="@+id/ocho"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/ocho"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="nueve"
            android:id="@+id/nueve"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/nueve"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="multiplicar"
            android:id="@+id/multiplicar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/multiplicacion"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="cuatro"
            android:id="@+id/cuatro"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/cuatro"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <Button
            android:onClick="cinco"
            android:id="@+id/cinco"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/cinco"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="seis"
            android:id="@+id/seis"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/seis"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button

            android:onClick="restar"
            android:id="@+id/restar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/resta"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="uno"
            android:id="@+id/uno"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/uno"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="dos"
            android:id="@+id/dos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/dos"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <Button
            android:onClick="tres"
            android:id="@+id/tres"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/tres"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <Button
            android:onClick="suma"
            android:id="@+id/suma"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/suma"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="cero"
            android:id="@+id/cero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/cero"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/punto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/gris_claro"
            android:text="@string/punto"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:onClick="igual"
            android:id="@+id/igual"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/igual"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </GridLayout>

</LinearLayout>